feat: add custom_data endpoints
